--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=GestionPresences
+spring.datasource.url=jdbc:postgresql://localhost:5432/GestionPresence
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configuration validation
+spring.web.resources.add-mappings=false
+
+# Messages d'erreur personnalisés
+spring.messages.basename=messages/validation
