mise en oeuvre de la sécurité

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.web.resources.add-mappings=false
 
 # Messages d'erreur personnalisés
 spring.messages.basename=messages/validation
+
+spring.mail.host:smtp.gmail.com
+spring.mail.port:587
+spring.mail.username:"fopa.lesley@gmail.com"
+spring.mail.password="1509eauverre"
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
