--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=GestionPresences
+
+#configuration de la BD
 spring.datasource.url=jdbc:postgresql://localhost:5432/GestionPresence
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#jpa configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 # Configuration validation
 spring.web.resources.add-mappings=false
@@ -14,10 +18,11 @@ spring.web.resources.add-mappings=false
 # Messages d'erreur personnalisés
 spring.messages.basename=messages/validation
 
+#configuration de l'email
 spring.mail.host:smtp.gmail.com
 spring.mail.port:587
-spring.mail.username:"fopa.lesley@gmail.com"
-spring.mail.password="1509eauverre"
+spring.mail.username:fopa.lesley@gmail.com
+spring.mail.password=1509eauverre
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
